deploy/openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: creaplanesopo
  annotations:
    openshift.io/display-name: "CreaPlanesOpo"
  labels:
    app.kubernetes.io/name: creaplanesopo
