deploy/openshift/50-service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: creaplanesopo
  namespace: creaplanesopo
  labels:
    app.kubernetes.io/name: creaplanesopo
spec:
  selector:
    app.kubernetes.io/name: creaplanesopo
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: creaplanesopo
  namespace: creaplanesopo
  labels:
    app.kubernetes.io/name: creaplanesopo
  annotations:
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/timeout: 300s
spec:
  to:
    kind: Service
    name: creaplanesopo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
